--- a/index.html
+++ b/index.html
@@ -119,7 +119,15 @@
 
           <div>
 
-            <button type="button">SUMBIT</button>
+            <input type="checkbox" class="col">
+
+            By checking this box you agree to join our mailing list.
+
+          </div>
+
+          <div class="justify-content-center p-3">
+
+            <button type="button" class="col-md-6">SUMBIT</button>
 
           </div>
 
@@ -162,7 +170,7 @@
 
 
 
-  <footer class="container-fluid">
+  <footer class="parallax container-fluid">
 
 
 
