--- a/index.html
+++ b/index.html
@@ -96,19 +96,19 @@
           <div id="input-card" class="text-start mt-3 mb-4">
 
             NAME
-            <input type="Name" class="col-12 p1">
+            <input type="Name" class="col-12 rounded-pill p1">
 
             PHONE
-            <input type="Phone" class="col-12 p-1">
+            <input type="Phone" class="col-12 rounded-pill p-1">
 
             EMAIL
-            <input type="Phone" class="col-12 p-1">
+            <input type="Phone" class="col-12 rounded-pill p-1">
 
             VENUE
-            <input type="Venue" class="col-12 p-1">
+            <input type="Venue" class="col-12 rounded-pill p-1">
 
             OFFER TYPE
-            <input type="Offer Price" class="col-12 p-1">
+            <input type="Offer Price" class="col-12 rounded-pill p-1">
 
           </div>
 
@@ -127,7 +127,7 @@
 
           <div class="justify-content-center p-3">
 
-            <button type="button" class="col-md-6">SUMBIT</button>
+            <button type="button" class="btn btn-secondary col-md-6 rounded-pill">SUMBIT</button>
 
           </div>
 
@@ -135,7 +135,9 @@
 
       </div>
 
-      <div class="card bg-dark order-2 text-light text-center main-font col-4 col-md-6 col-sm-12 p-5">
+
+
+      <div class="card row rounded bg-dark order-2 text-light text-center main-font col-4 col-md-6 col-sm-12 p-5">
 
         <div class="text-start border-start border-5 p-3 col-md-12">
 
@@ -145,7 +147,7 @@
 
         <div class="text-start">
 
-          <p>
+          <p class="col-12 mt-1">
 
             Join us in a state-of-the-art music experience. TRYPTA9 is leading in sound design with cutting edge
             artistic
@@ -153,12 +155,33 @@
 
           </p>
 
+          <p class="col-12 mt-1">
+
+            Currently touring across North America Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex nobis
+            dolorem explicabo exercitationem voluptatum excepturi! Et praesentium eius tempore consequatur, debitis
+            nihil libero mollitia est unde eos natus? Commodi, perferendis?
+
+          </p>
+
+          <p class="col-12 mt-1">
+
+            Currently touring across North America Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex nobis
+            dolorem explicabo exercitationem voluptatum excepturi! Et praesentium eius tempore consequatur, debitis
+            nihil libero mollitia est unde eos natus? Commodi, perferendis?
+
+          </p>
+
         </div>
 
       </div>
 
+
     </div>
 
+    <div class="row mt-5">
+      <div class="order-3 col-md-6 bg-light">oioioioioioioioi1</div>
+      <div class="order-4 card col-md-6 bg-light">oioioioioioioioi2</div>
+    </div>
 
 
 
