--- a/index.html
+++ b/index.html
@@ -61,37 +61,17 @@
 
   <header class="parallax main-font container-fluid">
 
+    <div class="row mt-5">
 
-    <div class="row d-flex header-row align-items-center justify-content-center">
+      <div class="order-1 text-light text-center main-font col-md-6 col-sm-12 p-5">
 
-      <div class="col-3 text-center ms-3 mb-4 p-2">
+        <div class="col-md-6 col-sm-12 card bg-dark d-flex justify-content-center">
 
-        <a class="bi-hexagon text-light glow-button" href="#main" style="font-size: 777%;"></a>
+          <div class="p-1">
 
-      </div>
+            <h4><b>B O O K I N G</b></h4>
 
-    </div>
-
-
-  </header>
-
-
-
-  <main id="main" class="main-background container-fluid p-5">
-
-
-
-    <div class="row mt-2">
-
-      <div class="card order-1 bg-dark text-light text-center main-font col-4 col-md-6 col-sm-12 p-5">
-
-        <div class="p-1">
-
-          <h4><b>B O O K I N G</b></h4>
-
-        </div>
-
-        <div class="row d-flex justify-content-center">
+          </div>
 
           <div id="input-card" class="text-start mt-3 mb-4">
 
@@ -112,11 +92,6 @@
 
           </div>
 
-
-        </div>
-
-        <div class="row">
-
           <div>
 
             <input type="checkbox" class="col">
@@ -127,19 +102,20 @@
 
           <div class="justify-content-center p-3">
 
-            <button type="button" class="btn btn-secondary col-md-6 rounded-pill">SUMBIT</button>
+            <button type="button" class="btn btn-secondary col-md-6 col-sm-12 rounded-pill">SUMBIT</button>
 
           </div>
 
         </div>
 
+
       </div>
 
 
 
-      <div class="card row rounded bg-dark order-2 text-light text-center main-font col-4 col-md-6 col-sm-12 p-5">
+      <div id="text-right" class="row rounded order-2 text-light main-font col-6">
 
-        <div class="text-start border-start border-5 p-3 col-md-12">
+        <div class="mt-5 d-flex justify-content-start h-25 border-start border-5 p-3 col-md-12">
 
           <h1>WORLD CLASS VIBRATION</h1>
 
@@ -177,6 +153,18 @@
 
 
     </div>
+
+
+
+
+  </header>
+
+
+
+  <main id="main" class="main-background container-fluid p-5">
+
+
+
 
     <div class="row mt-5">
       <div class="order-3 col-md-6 bg-light">oioioioioioioioi1</div>
