--- a/index.html
+++ b/index.html
@@ -65,18 +65,20 @@
 
       <div class="order-1 text-light text-center main-font col-md-6 col-sm-12 p-5">
 
+        <h4 class="text-start ms-4"><b>B O O K I N G</b></h4>
+
         <div class="col-md-6 col-sm-12 card bg-dark d-flex justify-content-center">
 
-          <div class="p-1">
+          <div class="p-1 mt-3 border-bottom border-light">
 
-            <h4><b>B O O K I N G</b></h4>
+            <p class="text-start ms-4"><i class="bi-hexagon p-2"></i>Please fill out this form</p>
 
-          </div>
+          </div class="col-md-8">
 
-          <div id="input-card" class="text-start mt-3 mb-4">
+          <div id="input-card" class="text-start p-3 mt-2 mb-4">
 
             NAME
-            <input type="Name" class="col-12 rounded-pill p1">
+            <input type="Name" class="col-12 rounded-pill p-1">
 
             PHONE
             <input type="Phone" class="col-12 rounded-pill p-1">
@@ -102,7 +104,7 @@
 
           <div class="justify-content-center p-3">
 
-            <button type="button" class="btn btn-secondary col-md-6 col-sm-12 rounded-pill">SUMBIT</button>
+            <button type="button" class="btn btn-secondary col-lg-6 col-md-12 col-sm-12 rounded-pill">SUMBIT</button>
 
           </div>
 
@@ -113,17 +115,18 @@
 
 
 
-      <div id="text-right" class="row rounded order-2 text-light main-font col-6">
+      <div id="text-right" class="row rounded move-that-left order-2 text-light main-font col-6">
 
-        <div class="mt-5 d-flex justify-content-start h-25 border-start border-5 p-3 col-md-12">
+        <div class="mt-5 d-flex justify-content-start h-25 border-start border-5 p-5 col-md-12">
 
-          <h1>WORLD CLASS VIBRATION</h1>
+          <h1><b></b>WORLD CLASS VIBRATION</b></h1>
 
         </div>
 
-        <div class="text-start">
 
-          <p class="col-12 mt-1">
+        <div class="text-start mb-5">
+
+          <p class="col-12">
 
             Join us in a state-of-the-art music experience. TRYPTA9 is leading in sound design with cutting edge
             artistic
@@ -131,7 +134,7 @@
 
           </p>
 
-          <p class="col-12 mt-1">
+          <p class="col-12">
 
             Currently touring across North America Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex nobis
             dolorem explicabo exercitationem voluptatum excepturi! Et praesentium eius tempore consequatur, debitis
@@ -139,7 +142,7 @@
 
           </p>
 
-          <p class="col-12 mt-1">
+          <p class="col-12">
 
             Currently touring across North America Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex nobis
             dolorem explicabo exercitationem voluptatum excepturi! Et praesentium eius tempore consequatur, debitis
@@ -152,9 +155,43 @@
       </div>
 
 
+
     </div>
 
 
+    <div class="row h-50">
+      <div class="order-3 text-light card col-md-6 bg-secondary">1</div>
+      <div class="order-4 text-light card col-md-6 bg-secondary">2</div>
+    </div>
+
+    <div class="row h-50">
+      <div id="card1" class="order-3 text-light col-md-4">3</div>
+      <div id="card2" class="order-3 text-light col-md-4">4</div>
+
+
+
+      <div id="card3" class="order-4 p-5 text-light card col-md-4 col-sm-12 bg-dark move-that-card">
+
+        <p class="fs-4">Mailing list perks</p>
+        <div class="mt-4">
+          <p><i class="bi-hexagon p-3"></i>Stay up to date with TRYPTA9</p>
+        </div>
+
+        <div class="mt-4">
+          <p><i class="bi-hexagon p-3"></i>Pre-sale codes before every show</p>
+        </div>
+
+        <div class="mt-4">
+          <p><i class="bi-hexagon p-3"></i>Tour dates and locations</p>
+        </div>
+
+        <div class="mt-4">
+          <p><i class="bi-hexagon p-3"></i>Join like-minded fans</p>
+        </div>
+
+      </div>
+
+    </div>
 
 
   </header>
@@ -165,11 +202,6 @@
 
 
 
-
-    <div class="row mt-5">
-      <div class="order-3 col-md-6 bg-light">oioioioioioioioi1</div>
-      <div class="order-4 card col-md-6 bg-light">oioioioioioioioi2</div>
-    </div>
 
 
 
