--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
 
+
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Site-Clone</title>
 
   <style>
     body.debug .container,
@@ -94,7 +95,7 @@
 
           </div>
 
-          <div>
+          <div class="col-12 p-3">
 
             <input type="checkbox" class="col">
 
@@ -117,7 +118,7 @@
 
       <div id="text-right" class="row rounded move-that-left order-2 text-light main-font col-6">
 
-        <div class="mt-5 d-flex justify-content-start h-25 border-start border-5 p-5 col-md-12">
+        <div class="mt-5 move-that-down d-flex justify-content-start h-25 border-start border-5 p-5 col-md-12">
 
           <h1><b></b>WORLD CLASS VIBRATION</b></h1>
 
@@ -160,13 +161,33 @@
 
 
     <div class="row h-50">
-      <div class="order-3 text-light card col-md-6 bg-secondary">1</div>
-      <div class="order-4 text-light card col-md-6 bg-secondary">2</div>
+
+
+      <div id="card2" class="order-5 text-light col-md-6 p-5 bg-middle">2</div>
+
+      <div id="card1" class="order-4 text-light col-md-6 p-5 bg-middle text-start">
+        <h2 class="border-bottom">TOURING NORTH AMERICA</h2>
+
+        <div class="mt-3 p-4">
+
+          <h4 class="p-2">Los Angeles, Seattle, New York, Miami, Denver, Toronto </h4>
+
+        </div>
+
+        <div class="mb-3">
+
+          <p class="p-3">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum velit nulla tempore
+            corporis voluptatum asperiores laborum quasi cum veniam necessitatibus at. </p>
+        </div>
+
+      </div>
+
     </div>
 
     <div class="row h-50">
-      <div id="card1" class="order-3 text-light col-md-4">3</div>
-      <div id="card2" class="order-3 text-light col-md-4">4</div>
+      <div class="order-3 text-light col-md-4">3</div>
+      <div class="order-3 text-light col-md-4">4</div>
 
 
 
@@ -187,6 +208,10 @@
 
         <div class="mt-4">
           <p><i class="bi-hexagon p-3"></i>Join like-minded fans</p>
+        </div>
+
+        <div class="mt-4">
+          <p><i class="bi-hexagon p-3"></i>Become a part of a movement</p>
         </div>
 
       </div>
