--- a/index.html
+++ b/index.html
@@ -165,18 +165,18 @@
 
       <div id="card2" class="order-5 text-light col-md-6 p-5 bg-middle">2</div>
 
-      <div id="card1" class="order-4 text-light col-md-6 p-5 bg-middle text-start">
-        <h2 class="border-bottom">TOURING NORTH AMERICA</h2>
+      <div id="card1" class="order-4 text-light col-md-6 p-3 bg-middle text-start">
+        <h2 id="text-clapper1" class="border-bottom">TOURING NORTH AMERICA</h2>
 
-        <div class="mt-3 p-4">
+        <div class="mt-1 p-3">
 
-          <h4 class="p-2">Los Angeles, Seattle, New York, Miami, Denver, Toronto </h4>
+          <h4 id="text-clapper2" class="p-1">Los Angeles, Seattle, New York, Miami, Denver, Toronto </h4>
 
         </div>
 
         <div class="mb-3">
 
-          <p class="p-3">
+          <p id="go-away" class="p-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum velit nulla tempore
             corporis voluptatum asperiores laborum quasi cum veniam necessitatibus at. </p>
         </div>
@@ -185,7 +185,7 @@
 
     </div>
 
-    <div class="row h-50">
+    <div class="row h-25">
       <div class="order-3 text-light col-md-4">3</div>
       <div class="order-3 text-light col-md-4">4</div>
 
@@ -202,19 +202,25 @@
           <p><i class="bi-hexagon p-3"></i>Pre-sale codes before every show</p>
         </div>
 
-        <div class="mt-4">
+        <div id="go-away3" class="mt-4">
           <p><i class="bi-hexagon p-3"></i>Tour dates and locations</p>
         </div>
 
-        <div class="mt-4">
+        <div id="go-away4" class="mt-4">
           <p><i class="bi-hexagon p-3"></i>Join like-minded fans</p>
         </div>
 
-        <div class="mt-4">
-          <p><i class="bi-hexagon p-3"></i>Become a part of a movement</p>
-        </div>
-
       </div>
+
+    </div>
+
+    <img src="" alt="">
+
+    <div class="row order-5 d-flex h-50">
+      <img src="https://i.pinimg.com/originals/12/48/ff/1248ffc605167cef917c9c370e7c96d2.jpg"
+        style="background-size: cover;" alt="broken img pls fix me"
+        class="col-md-6 w-25 move-that-ish text-light"></img>
+      <div class="col-md-6 justify-content-end move-that-yabish">2</div>
 
     </div>
 
