--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
     <div class="row h-50">
 
 
-      <div id="card2" class="order-5 text-light col-md-6 p-5 bg-middle">2</div>
+      <div id="card2" class="order-5 text-light col-md-6 p-5 bg-middle"></div>
 
       <div id="card1" class="order-4 text-light col-md-6 p-3 bg-middle text-start">
-        <h2 id="text-clapper1" class="border-bottom">TOURING NORTH AMERICA</h2>
+        <h2 id="text-clapper1" class="border-bottom">NA TOUR</h2>
 
         <div class="mt-1 p-3">
 
@@ -177,8 +177,11 @@
         <div class="mb-3">
 
           <p id="go-away" class="p-3">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum velit nulla tempore
-            corporis voluptatum asperiores laborum quasi cum veniam necessitatibus at. </p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nemo dolore, facilis sit tempore enim.
+            Sapiente qui, neque nobis inventore aliquid pariatur consectetur ad reprehenderit assumenda in nulla atque
+            obcaecati. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nemo dolore, facilis sit tempore
+            enim. Sapiente qui, neque nobis inventore aliquid pariatur consectetur ad reprehenderit assumenda in nulla
+            atque obcaecati. </p>
         </div>
 
       </div>
@@ -186,8 +189,8 @@
     </div>
 
     <div class="row h-25">
-      <div class="order-3 text-light col-md-4">3</div>
-      <div class="order-3 text-light col-md-4">4</div>
+      <div class="order-3 text-light col-md-4"></div>
+      <div class="order-3 text-light col-md-4"></div>
 
 
 
@@ -206,7 +209,7 @@
           <p><i class="bi-hexagon p-3"></i>Tour dates and locations</p>
         </div>
 
-        <div id="go-away4" class="mt-4">
+        <div id="go-away3" class="mt-4">
           <p><i class="bi-hexagon p-3"></i>Join like-minded fans</p>
         </div>
 
@@ -214,13 +217,35 @@
 
     </div>
 
-    <img src="" alt="">
 
-    <div class="row order-5 d-flex h-50">
-      <img src="https://i.pinimg.com/originals/12/48/ff/1248ffc605167cef917c9c370e7c96d2.jpg"
-        style="background-size: cover;" alt="broken img pls fix me"
-        class="col-md-6 w-25 move-that-ish text-light"></img>
-      <div class="col-md-6 justify-content-end move-that-yabish">2</div>
+
+    <div class="row order-5 col-sm-12 h-50">
+
+      <div>
+        <img src="https://i.pinimg.com/originals/12/48/ff/1248ffc605167cef917c9c370e7c96d2.jpg"
+          style="background-size: cover;" alt="broken img pls fix me"
+          class="col-md-6 w-25 move-that-ish text-light"></img>
+      </div>
+
+      <div class="card bg-dark col-6 col-md-6 col-sm-6 h-100 p-5 text-light justify-content-start move-that-yabish">
+
+        <div class="col-md-6 col-md-12">
+          <h2>
+            <i class="fs-1 bi-hexagon"></i>BIG TEXT GOES HERE
+          </h2>
+        </div>
+
+        <div class="mt-2 ms-2 p-1">
+          <h3>SMALLER BIG TEXT HERE</h3>
+        </div>
+
+
+        <div class="col-m-6 col-sm-12 mt-2 ms-5=2 p-1">
+          <p>Even smaller text here Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis incidunt
+            accusamus quam consequuntur nam.</p>
+        </div>
+
+      </div>
 
     </div>
 
