--- a/index.html
+++ b/index.html
@@ -221,13 +221,13 @@
 
     <div class="row order-5 col-sm-12 h-50">
 
-      <div>
+      <div id="img-mover" class="col-6 col-md-6 col-sm-6 w-25">
         <img src="https://i.pinimg.com/originals/12/48/ff/1248ffc605167cef917c9c370e7c96d2.jpg"
-          style="background-size: cover;" alt="broken img pls fix me"
-          class="col-md-6 w-25 move-that-ish text-light"></img>
+          style="background-size: cover;" alt="broken img pls fix me" class="move-that-ish text-light"></img>
       </div>
 
-      <div class="card bg-dark col-6 col-md-6 col-sm-6 h-100 p-5 text-light justify-content-start move-that-yabish">
+      <div id="card-mover"
+        class="card bg-dark col-6 col-md-6 col-sm-6 h-100 p-5 text-light justify-content-start move-that-yabish">
 
         <div class="col-md-6 col-md-12">
           <h2>
@@ -236,7 +236,7 @@
         </div>
 
         <div class="mt-2 ms-2 p-1">
-          <h3>SMALLER BIG TEXT HERE</h3>
+          <h4>SMALLER BIG TEXT HERE</h4>
         </div>
 
 
@@ -258,18 +258,29 @@
 
 
 
-
-
-
-
-
-
-
   </main>
 
 
 
   <footer class="parallax container-fluid">
+
+    <div id="footer-row" class="row">
+
+      <div>
+
+        <div class="col-md-4">
+
+          <div class="col-md-4">
+
+          </div>
+
+          <div class="col-md-4">
+
+          </div>
+        </div>
+
+
+      </div>
 
 
 
