--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
   <nav class="navbar main-font bg-dark fixed-top container-fluid">
     <div class=" justify-content-center text-start">
       <h1>
-        <a class="col-4 text-light bi-hexagon glow-button" href="#"></a>
-        <a class="col-4 navbar-brand text-light glow-button" href="#">T R Y P T A 9</a>
+        <a class="col-4 text-light bi-hexagon glow-button" href="#header"></a>
+        <a class="col-4 navbar-brand text-light glow-button" href="#header">T R Y P T A 9</a>
       </h1>
     </div>
   </nav>
 
 
 
-  <header class="parallax main-font container-fluid">
+  <header id="header" class="parallax main-font container-fluid">
 
     <div class="row mt-5">
 
@@ -227,11 +227,11 @@
       </div>
 
       <div id="card-mover"
-        class="card bg-dark col-6 col-md-6 col-sm-6 h-100 p-5 text-light justify-content-start move-that-yabish">
+        class="card bg-dark col-6 col-md-6 col-sm-6 h-75 p-5 text-light justify-content-start move-that-yabish">
 
         <div class="col-md-6 col-md-12">
           <h2>
-            <i class="fs-1 bi-hexagon"></i>BIG TEXT GOES HERE
+            <i class="fs-1 bi-hexagon p-2"></i>BIG TEXT GOES HERE
           </h2>
         </div>
 
@@ -264,23 +264,33 @@
 
   <footer class="parallax container-fluid">
 
-    <div id="footer-row" class="row">
+    <div id="footer-row" class="row justify-content-center p-5">
 
-      <div>
+      <div
+        class="review-cards bg-middle text-center text-light mb-5 w-25 p-3 me-5 h-75 col-md-4 border border-secondary rounded">
 
-        <div class="col-md-4">
-
-          <div class="col-md-4">
-
-          </div>
-
-          <div class="col-md-4">
-
-          </div>
-        </div>
-
-
+        <h4 class="text-center main-font text-light mt-4 col-12 border-bottom">NAME HERE</h4>
+        <p class="text-light text-center col-12">great vibes, good people</p>
       </div>
+
+      <div class="bg-middle text-center align-center text-light p-3 col-md-4 border border-secondary rounded">
+
+        <i class="bi-hexagon col-4 fs-1 p-2 me-5"></i><i class="bi-hexagon col-4 fs-1 p-2"></i><i
+          class="bi-hexagon col-4 fs-1 p-2 ms-5"></i>
+        ______________________________________________________
+
+        <h4 class="text-center main-font text-light mt-2 col-12">NAME HERE</h4>
+        <p class="text-light text-center col-12">great vibes, good people</p>
+      </div>
+
+      <div
+        class="review-cards bg-middle text-center text-light w-25 p-3 ms-5 h-75 col-md-4 border border-secondary rounded">
+
+        <h4 class="text-center main-font text-light mt-4 col-12 border-bottom">NAME HERE</h4>
+        <p class="text-light text-center col-12">great vibes, good people</p>
+      </div>
+
+    </div>
 
 
 
