--- a/index.html
+++ b/index.html
@@ -179,9 +179,7 @@
           <p id="go-away" class="p-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nemo dolore, facilis sit tempore enim.
             Sapiente qui, neque nobis inventore aliquid pariatur consectetur ad reprehenderit assumenda in nulla atque
-            obcaecati. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nemo dolore, facilis sit tempore
-            enim. Sapiente qui, neque nobis inventore aliquid pariatur consectetur ad reprehenderit assumenda in nulla
-            atque obcaecati. </p>
+            obcaecati. Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
         </div>
 
       </div>
@@ -264,31 +262,35 @@
 
   <footer class="parallax container-fluid">
 
-    <div id="footer-row" class="row justify-content-center p-5">
+    <div id="footer-row" class="row shadow-lg justify-content-center p-5 order-5">
 
-      <div
-        class="review-cards bg-middle text-center text-light mb-5 w-25 p-3 me-5 h-75 col-md-4 border border-secondary rounded">
 
-        <h4 class="text-center main-font text-light mt-4 col-12 border-bottom">NAME HERE</h4>
-        <p class="text-light text-center col-12">great vibes, good people</p>
+
+      <div id="review-card-left"
+        class="review-cards bg-middle text-center text-light mb-5 w-25 p-3 me-5 h-75 h-md-100 col-md-4 border border-4 border-secondary rounded">
+
+        <h4 class="text-center main-font text-light mt-1 col-12 border-bottom">NAME HERE</h4>
+        <p class="text-light text-center col-12 p-2">great vibes, good people</p>
       </div>
 
-      <div class="bg-middle text-center align-center text-light p-3 col-md-4 border border-secondary rounded">
+      <div id="review-card-center"
+        class="bg-middle text-center align-center text-light p-3 col-md-4 border border-4 border-secondary rounded">
 
-        <i class="bi-hexagon col-4 fs-1 p-2 me-5"></i><i class="bi-hexagon col-4 fs-1 p-2"></i><i
-          class="bi-hexagon col-4 fs-1 p-2 ms-5"></i>
-        ______________________________________________________
+        <i class="bi-hexagon col-4 fs-1 me-5"></i><i class="bi-hexagon col-4 fs-1"></i><i
+          class="bi-hexagon col-4 fs-1 ms-5"></i>
 
         <h4 class="text-center main-font text-light mt-2 col-12">NAME HERE</h4>
-        <p class="text-light text-center col-12">great vibes, good people</p>
+        <p class="text-light text-center col-12 p-2">great vibes, good people</p>
       </div>
 
-      <div
-        class="review-cards bg-middle text-center text-light w-25 p-3 ms-5 h-75 col-md-4 border border-secondary rounded">
+      <div id="review-card-right"
+        class="review-cards bg-middle text-center text-light w-25 p-3 ms-5 h-75 h-md-100 col-md-4 border border-4 border-secondary rounded">
 
-        <h4 class="text-center main-font text-light mt-4 col-12 border-bottom">NAME HERE</h4>
-        <p class="text-light text-center col-12">great vibes, good people</p>
+        <h4 class="text-center main-font text-light mt-1 col-12 border-bottom">NAME HERE</h4>
+        <p class="text-light text-center col-12 p-2">great vibes, good people</p>
       </div>
+
+
 
     </div>
 
