--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
           <div class="p-1 mt-3 border-bottom border-light">
 
-            <p class="text-start ms-4"><i class="bi-hexagon p-2"></i>Please fill out this form</p>
+            <p class="text-start ms-4 font-killer"><i class="bi-hexagon fs-4 p-2"></i>Please complete this form</p>
 
           </div class="col-md-8">
 
@@ -95,7 +95,7 @@
 
           </div>
 
-          <div class="col-12 p-3">
+          <div class="col-12 p-3 font-killer">
 
             <input type="checkbox" class="col">
 
@@ -127,7 +127,7 @@
 
         <div class="text-start mb-5">
 
-          <p class="col-12">
+          <p class="col-12 font-killer">
 
             Join us in a state-of-the-art music experience. TRYPTA9 is leading in sound design with cutting edge
             artistic
@@ -135,7 +135,7 @@
 
           </p>
 
-          <p class="col-12">
+          <p class="col-12 font-killer">
 
             Currently touring across North America Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex nobis
             dolorem explicabo exercitationem voluptatum excepturi! Et praesentium eius tempore consequatur, debitis
@@ -143,7 +143,7 @@
 
           </p>
 
-          <p class="col-12">
+          <p class="col-12 font-killer">
 
             Currently touring across North America Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex nobis
             dolorem explicabo exercitationem voluptatum excepturi! Et praesentium eius tempore consequatur, debitis
@@ -165,18 +165,18 @@
 
       <div id="card2" class="order-5 text-light col-md-6 p-5 bg-middle"></div>
 
-      <div id="card1" class="order-4 text-light col-md-6 p-3 bg-middle text-start">
-        <h2 id="text-clapper1" class="border-bottom">NA TOUR</h2>
+      <div id="card1" class="order-4 text-light col-md-6 p-5 bg-middle text-start">
+        <h2 id="text-clapper1" class="border-bottom"><i class="bi-hexagon p-2"></i>NA TOUR</h2>
 
         <div class="mt-1 p-3">
 
-          <h4 id="text-clapper2" class="p-1">Los Angeles, Seattle, New York, Miami, Denver, Toronto </h4>
+          <h4 id="text-clapper2" class="p-1 font-killer">Los Angeles, Seattle, New York, Miami, Denver, Toronto </h4>
 
         </div>
 
         <div class="mb-3">
 
-          <p id="go-away" class="p-3">
+          <p id="go-away" class="p-1 font-killer">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nemo dolore, facilis sit tempore enim.
             Sapiente qui, neque nobis inventore aliquid pariatur consectetur ad reprehenderit assumenda in nulla atque
             obcaecati. Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
@@ -196,7 +196,7 @@
 
         <p class="fs-4">Mailing list perks</p>
         <div class="mt-4">
-          <p><i class="bi-hexagon p-3"></i>Stay up to date with TRYPTA9</p>
+          <p><i class="bi-hexagon p-3 font-killer"></i>Stay up to date with TRYPTA9</p>
         </div>
 
         <div class="mt-4">
@@ -225,7 +225,7 @@
       </div>
 
       <div id="card-mover"
-        class="card bg-dark col-6 col-md-6 col-sm-6 h-75 p-5 text-light justify-content-start move-that-yabish">
+        class="card bg-dark col-6 col-md-6 col-sm-6 h-75 p-4 text-light justify-content-start move-that-yabish">
 
         <div class="col-md-6 col-md-12">
           <h2>
@@ -238,9 +238,9 @@
         </div>
 
 
-        <div class="col-m-6 col-sm-12 mt-2 ms-5=2 p-1">
+        <div class="col-m-6 col-sm-12 mt-2 p-1 font-killer bye-bye">
           <p>Even smaller text here Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis incidunt
-            accusamus quam consequuntur nam.</p>
+          </p>
         </div>
 
       </div>
@@ -267,14 +267,14 @@
 
 
       <div id="review-card-left"
-        class="review-cards bg-middle text-center text-light mb-5 w-25 p-3 me-5 h-75 h-md-100 col-md-4 border border-4 border-secondary rounded">
+        class="review-cards bg-middle text-center text-light mb-5 w-25 p-3 me-5 h-75 col-md-4 border border-4 border-secondary rounded">
 
         <h4 class="text-center main-font text-light mt-1 col-12 border-bottom">NAME HERE</h4>
         <p class="text-light text-center col-12 p-2">great vibes, good people</p>
       </div>
 
       <div id="review-card-center"
-        class="bg-middle text-center align-center text-light p-3 col-md-4 border border-4 border-secondary rounded">
+        class="bg-middle text-center align-center text-light p-2 col-md-4 border border-4 border-secondary rounded">
 
         <i class="bi-hexagon col-4 fs-1 me-5"></i><i class="bi-hexagon col-4 fs-1"></i><i
           class="bi-hexagon col-4 fs-1 ms-5"></i>
@@ -284,13 +284,40 @@
       </div>
 
       <div id="review-card-right"
-        class="review-cards bg-middle text-center text-light w-25 p-3 ms-5 h-75 h-md-100 col-md-4 border border-4 border-secondary rounded">
+        class="review-cards bg-middle text-center text-light w-25 p-3 ms-5 h-75 col-md-4 border border-4 border-secondary rounded">
 
         <h4 class="text-center main-font text-light mt-1 col-12 border-bottom">NAME HERE</h4>
         <p class="text-light text-center col-12 p-2">great vibes, good people</p>
       </div>
 
+    </div>
 
+    <div id="second-2-last" class="row move-it-boi1">
+
+      <div class="bg-dark">
+
+        <h1 class="text-light main-font p-2 border-bottom col-md-6 col-sm-12 mt-5 me-5 ms-3">CLOSING HEADER HERE</h1>
+
+        <p id="text-remover" class="text-light col-12 p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Voluptatum dolores
+          tempora
+          culpa
+          eligendi id ullam,
+          quisquam modi illo neque porro tenetur necessitatibus iure fugiat error quo possimus eveniet sequi
+          accusantium.
+        </p>
+
+      </div>
+
+    </div>
+
+    <div id="first-to-last" class="row fixed-bottom move-it-boi2">
+
+      <div class="bg-middle text-center text-light p-3">
+
+        <p>HAVEN FRICKE | BOISE CODEWORKS</p>
+
+      </div>
 
     </div>
 
