--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <p><i class="bi-hexagon p-3 font-killer"></i>Stay up to date with TRYPTA9</p>
         </div>
 
-        <div class="mt-4">
+        <div id="go-away2" class="mt-4">
           <p><i class="bi-hexagon p-3"></i>Pre-sale codes before every show</p>
         </div>
 
@@ -219,7 +219,7 @@
 
     <div class="row order-5 col-sm-12 h-50">
 
-      <div id="img-mover" class="col-6 col-md-6 col-sm-6 w-25">
+      <div id="img-mover" class="col-6 col-md-6 col-sm-6 w-25 justify-content-center">
         <img src="https://i.pinimg.com/originals/12/48/ff/1248ffc605167cef917c9c370e7c96d2.jpg"
           style="background-size: cover;" alt="broken img pls fix me" class="move-that-ish text-light"></img>
       </div>
