--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
     <div class="row order-5 col-sm-12 h-50">
 
-      <div id="img-mover" class="col-6 col-md-6 col-sm-6 w-25 justify-content-center">
+      <div id="img-mover" class="col-6 col-md-6 col-sm-6 w-25 justify-content-center align-middle">
         <img src="https://i.pinimg.com/originals/12/48/ff/1248ffc605167cef917c9c370e7c96d2.jpg"
           style="background-size: cover;" alt="broken img pls fix me" class="move-that-ish text-light"></img>
       </div>
