--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
 
 
-      <div id="card3" class="order-4 p-5 text-light card col-md-4 col-sm-12 bg-dark move-that-card">
+      <div id="card3" class="order-4 shadow-lg p-5 text-light card col-md-4 col-sm-12 bg-dark move-that-card">
 
         <p class="fs-4">Mailing list perks</p>
         <div class="mt-4">
@@ -217,15 +217,15 @@
 
 
 
-    <div class="row order-5 col-sm-12 h-50">
+    <div class="row order-5 col-sm-12 h-50 shadow-lg rounded border">
 
-      <div id="img-mover" class="col-6 col-md-6 col-sm-6 w-25 justify-content-center align-middle">
+      <div id="img-mover" class="col-6 col-md-6 col-sm-6 w-25 rounded justify-content-center align-middle">
         <img src="https://i.pinimg.com/originals/12/48/ff/1248ffc605167cef917c9c370e7c96d2.jpg"
           style="background-size: cover;" alt="broken img pls fix me" class="move-that-ish text-light"></img>
       </div>
 
       <div id="card-mover"
-        class="card bg-dark col-6 col-md-6 col-sm-6 h-75 p-4 text-light justify-content-start move-that-yabish">
+        class="card bg-dark shadow-lg col-6 col-md-6 col-sm-6 h-75 p-4 text-light justify-content-start move-that-yabish">
 
         <div class="col-md-6 col-md-12">
           <h2>
@@ -262,19 +262,19 @@
 
   <footer class="parallax container-fluid">
 
-    <div id="footer-row" class="row shadow-lg justify-content-center p-5 order-5">
+    <div id="footer-row" class="row justify-content-center p-5 order-5">
 
 
 
       <div id="review-card-left"
-        class="review-cards bg-middle text-center text-light mb-5 w-25 p-3 me-5 h-75 col-md-4 border border-4 border-secondary rounded">
+        class="review-cards shadow-lg bg-middle text-center text-light mb-5 w-25 p-3 me-5 h-75 col-md-4 border border-4 border-secondary rounded">
 
         <h4 class="text-center main-font text-light mt-1 col-12 border-bottom">NAME HERE</h4>
         <p class="text-light text-center col-12 p-2">great vibes, good people</p>
       </div>
 
       <div id="review-card-center"
-        class="bg-middle text-center align-center text-light p-2 col-md-4 border border-4 border-secondary rounded">
+        class="bg-middle shadow-lg text-center align-center text-light p-2 col-md-4 border border-4 border-secondary rounded">
 
         <i class="bi-hexagon col-4 fs-1 me-5"></i><i class="bi-hexagon col-4 fs-1"></i><i
           class="bi-hexagon col-4 fs-1 ms-5"></i>
@@ -284,7 +284,7 @@
       </div>
 
       <div id="review-card-right"
-        class="review-cards bg-middle text-center text-light w-25 p-3 ms-5 h-75 col-md-4 border border-4 border-secondary rounded">
+        class="review-cards shadow-lg bg-middle text-center text-light w-25 p-3 ms-5 h-75 col-md-4 border border-4 border-secondary rounded">
 
         <h4 class="text-center main-font text-light mt-1 col-12 border-bottom">NAME HERE</h4>
         <p class="text-light text-center col-12 p-2">great vibes, good people</p>
@@ -296,7 +296,8 @@
 
       <div class="bg-dark">
 
-        <h1 class="text-light main-font p-2 border-bottom col-md-6 col-sm-12 mt-5 me-5 ms-3">CLOSING HEADER HERE</h1>
+        <h1 class="text-light shadow-lg main-font p-2 border-bottom col-md-6 col-sm-12 mt-5 me-5 ms-3">CLOSING HEADER
+          HERE</h1>
 
         <p id="text-remover" class="text-light col-12 p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Voluptatum dolores
