--- a/index.html
+++ b/index.html
@@ -292,11 +292,11 @@
 
     </div>
 
-    <div id="second-2-last" class="row move-it-boi1">
+    <div id="second-2-last" class="row shadow-lg move-it-boi1">
 
       <div class="bg-dark">
 
-        <h1 class="text-light shadow-lg main-font p-2 border-bottom col-md-6 col-sm-12 mt-5 me-5 ms-3">CLOSING HEADER
+        <h1 class="text-light main-font p-2 border-bottom col-md-6 col-sm-12 mt-5 me-5 ms-3">CLOSING HEADER
           HERE</h1>
 
         <p id="text-remover" class="text-light col-12 p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
