--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
 
         <div class="mt-1 p-3">
 
-          <h4 id="text-clapper2" class="p-1 font-killer">Los Angeles, Seattle, New York, Miami, Denver, Toronto </h4>
+          <h4 id="text-clapper2" class="p-1 font-killer bye-bye">Los Angeles, Seattle, New York, Miami, Denver, Toronto
+          </h4>
 
         </div>
 
@@ -233,7 +234,7 @@
           </h2>
         </div>
 
-        <div class="mt-2 ms-2 p-1">
+        <div class="mt-2 bye-bye ms-2 p-1">
           <h4>SMALLER BIG TEXT HERE</h4>
         </div>
 
